Ajout archivage et score des jeux du jour, fix sécurité